compression/2.2/modules/ROOT/pages/compression-documentation.adoc
= Compression Module Reference - Mule 4
:page-aliases: connectors::compression/compression-documentation.adoc

Compression Module v2.2

A module which provides functionality for compressing and decompressing data.

Release Notes: xref:release-notes::mule-runtime/module-compression.adoc[Compression Module Release Notes]

== Configurations
---
[[config]]
=== Config

Default configuration

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | |x
|===


== Operations

[[archive]]
=== Archive
`<compression:archive>`

Compresses all the given entries into a new file in the configured format.
Each entry passed to this operation is placed inside the compressed archive with
the name you provide in the DataWeave script. For example, for this expression:

`{ file: vars.aTxtContent, 'dir/resume.pdf': vars.pdf }`

The resultant archive contains two entries one named "file" at the root level and
another one called "resume.pdf" inside the "dir" directory.

`+- Archive |  \- file1 |  \+ dir1 |  \- file2`

In this example, the slash `/` in the name of an entry indicates directory
separation, so all names are introspected to create directories inside the
archive.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Entries a| Object | Entries to add to the archive file. |  #[payload] |
| Archiver a| <<zip-archiver>> | An archiver strategy compresses multiple entries into an archive. |  |x
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior.|  |
| Target Variable a| String |  Name of the variable that stores the operation's output.|  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
|===

==== Output
[cols=".^50%,.^50%"]
|===
| *Type* a| Binary
|===


==== Throws
* COMPRESSION:COULD_NOT_COMPRESS


[[compress]]
=== Compress
`<compression:compress>`

Compresses a given content using the configured format, ZIP or GZIP.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Content a| Binary | The content to compress.  |  #[payload]|
| Compressor a| One of:

* gzip-compressor
* <<zip-compressor>> | A compressor strategy compresses a file or a single-entry archive. |  |x
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Output Encoding a| String |  The encoding of the payload that this operation outputs. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
|===

==== Output
[cols=".^50%,.^50%"]
|===
| *Type* a| Binary
|===


==== Throws
* COMPRESSION:COULD_NOT_COMPRESS


[[decompress]]
=== Decompress
`<compression:decompress>`

Decompresses a single entry of compressed content in the configured format Zip or Gzip. Compressed archives can have multiple entries, this operation manages only single entry archives because if the archive contains more than one entry, the operation does not know which to return. For multiple entry archives use the *Extract* operation, which enables you to choose only formats that accept multiple entries.

==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Compressed a| Binary | The content to decompress. |  #[payload] |
| Decompressor a| One of:

* gzip-decompressor
* zip-decompressor | A compressor strategy compresses a file or a single-entry archive |  |x
| Output Mime Type a| String | The MIME type of the payload that this operation outputs. |  |
| Output Encoding a| String | The encoding of the payload that this operation outputs. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
|===

==== Output
[cols=".^50%,.^50%"]
|===
| *Type* a| Binary
|===


==== Throws
* COMPRESSION:COULD_NOT_DECOMPRESS
* COMPRESSION:INVALID_ARCHIVE
* COMPRESSION:TOO_MANY_ENTRIES


[[extract]]
=== Extract
`<compression:extract>`

Decompresses a given content that represent an archive in a compression format.


==== Parameters
[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Compressed a| Binary | The content of a compressed archive. |  #[payload]|
| Extractor a| One of:

* zip-extractor | An extractor strategy decompresses an archive with multiple entries that are compressed in a particular format. |  |x
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* <<non-repeatable-stream>> |  Configures how Mule processes streams. Repeatable streams are the default behavior.. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
|===

==== Output
[cols=".^50%,.^50%"]
|===
| *Type* a| Object
|===


==== Throws
* COMPRESSION:COULD_NOT_DECOMPRESS
* COMPRESSION:INVALID_ARCHIVE

== Types
[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

When streaming in this mode, Mule does not use the disk to buffer the contents. If you exceed the buffer size, the message fails.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of memory to allocate to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower will mean that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised when the buffer gets full. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory that will be used. If more than that is used then a STREAM_MAXIMUM_SIZE_EXCEEDED error will be raised. A value lower or equal to zero means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which all these attributes are expressed. |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

File store repeatable streams require buffering, and there are different buffering strategies. Mule keeps a portion of contents in memory. If the stream contents are larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | Defines the maximum memory that the stream should use to keep data in memory. If more than that is consumed then it will start to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[non-repeatable-stream]
=== Non-repeatable Stream

Disables the repeatable stream functionality and uses non-repeatable streams to have less performance overhead, memory use, and cost.

[[zip-compressor]]
=== Zip Compressor

The Zip compressor *strategy declares that the content must be compressed in the `zip` format.

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Force Zip64 a| Boolean | Enables you to compress files and byte arrays greater than 4 GB. | false |
|======================

[[zip-archiver]]
=== Zip Archiver
The Zip archive strategy declares that the content must be compressed  with the `zip` format.

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Force Zip64 a| Boolean | Enables you to archive files and byte arrays greater than 4 GB. | false |
|======================



== See Also

https://help.mulesoft.com[MuleSoft Help Center]
